# eelbot-framework

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: asio.cmake  catch.cmake  cpprestsdk.cmake  cpr.cmake  fmt.cmake  json.cmake  websocketpp.cmake  zlib.cmake
include/eelbot_framework/: bot.hpp  conn.hpp  discord_bot.hpp  eelbot_framework.hpp  framework.hpp  msg.hpp  tls.hpp
include/eelbot_framework/discord_bot/: bot.hpp
include/eelbot_framework/log/: logger.hpp  stdout_logger.hpp
src/: compression.cpp  cpprestsdk_helpers.cpp  eelbot_framework.cpp  framework.cpp  json.cpp  rest.cpp  websocket.cpp
src/discord_bot/: bot.cpp  rest_api.cpp
src/include/eelbot_framework/: compression.hpp  cpprestsdk_helpers.hpp  json.hpp  os.hpp  rest.hpp  websocket.hpp
src/include/eelbot_framework/discord_bot/: codes.hpp  endpoints.hpp  opcodes.hpp  rest_api.hpp  structs.hpp
src/include/eelbot_framework/json/: common.hpp  discord_bot.hpp
src/include/eelbot_framework/websocket/: logger.hpp
src/log/: logger.cpp  stdout_logger.cpp
test/: json_serialize_test.cpp  json_test.cpp
test/src/compression/: zlib_inflate_test.cpp
test/src/json/: json_deserialize_test.cpp
